地图绘制学习 及 一些排序算法

--- a/css/model.html
+++ b/css/model.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>模板页</title>
+    <!-- 本地加载 -->
+    <link rel="stylesheet" type="text/css" href="../css/studynote.css">
     <link rel="stylesheet" type="text/css" href="../css/studynote_v2.css">
+    <!-- github加载 -->
+    <link rel="stylesheet" type="text/css" href="https://rawgit.com/SandBoat/SomeNotes/master/css/studynote.css">
+    <link rel="stylesheet" type="text/css" href="https://rawgit.com/SandBoat/SomeNotes/master/css/studynote_v2.css">
 </head>
 
 <body>
