--- a/arithmetic/sort/code.html
+++ b/arithmetic/sort/code.html
@@ -13,8 +13,8 @@
     <script type="text/javascript">
     // 生成随机输入数组
     var inputArr = [];
-    for (var i = 0; i < 1000; i++) {
-        inputArr.push(Math.ceil(Math.random() * 10000));
+    for (var i = 0; i < 40000; i++) {
+        inputArr.push(Math.ceil(Math.random() * 100000));
     }
     // 待排序数组
     var outputArea = document.getElementById("inputArea");
@@ -38,8 +38,8 @@
             tempArrLen = tempArr.length;
             func(tempArr, tempArrLen); //执行待测函数
         }
-        myOutput(outputArea, tempArr);
         var end = new Date().getTime(); //结束时间
+        myOutput(outputArea, tempArr);
         timeArea.innerHTML = "运行时间：" + (end - start) + "ms";
     }
     // 交换
@@ -150,15 +150,15 @@
     var xe = function(arr, arrLength) {
         var theArray = [];
         var nElems = 0;
-        arraySh(theArray,arrLength*3+1);
-        for(var i=0;i<arrLength;i++){
-        	nElems = insert(theArray, nElems, arr[i]);
+        arraySh(theArray, arrLength * 3 + 1);
+        for (var i = 0; i < arrLength; i++) {
+            nElems = insert(theArray, nElems, arr[i]);
         }
         shellSort(theArray, nElems);
     }
 
     // 数组初始化
-    function arraySh(theArray,max) {
+    function arraySh(theArray, max) {
         for (var i = 0; i < max; i++) {
             theArray[i] = 0;
         }
@@ -166,7 +166,7 @@
 
     // 插入数据
     // 返回nElems
-    function insert(theArray, nElems,value) {
+    function insert(theArray, nElems, value) {
         theArray[nElems] = value;
         nElems++;
         return nElems;
@@ -192,8 +192,7 @@
             h = (h - 1) / 3;
         }
     }
-    // test(xe);
-
+    // test(gb, inputArr);
     </script>
 </body>
 
