更新远程css引用

--- a/jsNote/arithmetic/sort/index.html
+++ b/jsNote/arithmetic/sort/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>排序</title>
-    <link rel="stylesheet" type="text/css" href="https://rawgit.com/SandBoat/SomeNotes/master/css/studynote_v2.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/SandBoat/SomeNotes/master/css/studynote_v2.css">
 </head>
 
 <body>
